# grpc-demo

./: README.md  justfile  pyproject.toml
api/: main.py
core/: dependencies.py  env.py  main.py
core/dal/: models.py  query.py  utils.py
core/service/: user_service.py
core/transport/: user_manager_servicer.py
docker/: docker-compose.yaml
proto/v1/: user_manager.proto  user_manager_pb2.py  user_manager_pb2.pyi  user_manager_pb2_grpc.py
sqlc/: query.sql  schema.sql  sqlc.yaml
